Adding and removing groups and links fixed

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
             <div class="section">
                 <main class="container">
-                    <p style="opacity: 0.7">Load a JSON or HTML file to start.</p>
+                    <p>There is nothing to show here...</p>
                 </main>
             </div>
         </div>
 
-        <!-- Link Modal -->
+        <!-- Add Link Modal -->
         <div class="modal" id="linkModal">
             <div class="modal-content">
                 <h2>Add a new link</h2>
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <!-- Group Modal -->
+        <!-- Add Group Modal -->
         <div class="modal" id="groupModal">
             <div class="modal-content">
                 <h2>Add a new group</h2>
@@ -104,7 +104,7 @@
             </div>
         </div>
 
-        <!-- Group Remove Confirmation Modal -->
+        <!-- Remove Group Modal -->
         <div class="modal" id="removeGroupModal">
             <div class="modal-content">
                 <h2>Remove group</h2>
