Styling fixes, new art added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- Overlay for when menu is open -->
         <div class="overlay" id="overlay"></div>
 
-        <div id="topcontainer" class="top-container">
+        <div id="topcontainer" class="top-container top-container-hidden-items">
             <div class="hero" id="hero">
                 <div id="clock" class="clock"></div>
                 <section class="search-bar" id="searchbar">
