Clock color match art setting added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <div class="menu-item">
                     <p>Image</p>
                     <select class="add-btn" id="artName"><option value="">Select art...</option></select>
-                    <input type="checkbox" id="randomArt" checked> random</input>
+                    <input type="checkbox" id="randomArt" checked> random art</input>
+                    <br>
+                    <input type="checkbox" id="artClockColor"> clock color from art</input>
                 </div>
 
                 <div class="menu-item">
